@@ -134,6 +134,10 @@
     <branch id="HEAD"/>
   </module>
 
+  <module id="billreminder">
+     <branch id="HEAD"/>
+  </module>
+
   <module id="blam">
     <branch id="HEAD"/>
   </module>
