@@ -128,6 +128,7 @@
     <module id="banter"/>
     <module id="beagle"/>
     <module id="beast"/>
+    <module id="billreminder"/>
     <module id="blam"/>
     <module id="bookmark-applet"/>
     <module id="brasero"/>
