@@ -1,3 +1,8 @@
+2008-08-26 Gil Forcada <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Added new module billreminder in Extras.
+
 2008-08-22  Claude Paroz  <claude@2xlibre.net>
 
 	* releases.xml.in: Specify 'master' branch for xkeyboard-config (otherwise
